resources/base_code/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: academy-service
spec:
  selector:
    app: academy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
