resources/base_code/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: academy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: academy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: academy-service
                port:
                  number: 8080
